--- a/style2.css
+++ b/style2.css
@@ -53,10 +53,102 @@
  #why .row>.third {
    width: 100%;
    margin-bottom: 40px;
-   margin-top: 20px
+   margin-top: 20px;
  }
 /* general */
 
+ body {
+   margin: 0 5%
+ }
+ img {
+   height: 130px;
+   padding: 20px 0;
+   margin-top: 30px;
+ }
+
+h3 {
+  font-size: 25px;
+  padding: 10px 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0px;
+
+}
+
+h1 {
+  text-transform: uppercase;
+  font-size: 25px;
+}
+
+}
+
+/* max-width 999px view */
+
+@media screen and (max-width: 999px){
+
+  .row {
+    width: 100%;
+
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+  }
+/* *img {
+ : 100vh;
+} */
+ /* BLOCCO LEZIONI */
+ #lezioni .row>.left,
+ #lezioni .row>.right {
+   width: 50%;
+   float: left;
+   margin-bottom: 40px;
+ }
+
+ #lezioni .row img {
+   /* per centrare orizzontalmente */
+   display: block;
+   margin-right: auto;
+   margin-left: auto;
+   ;
+ }
+
+ /* BLOCCO STEPS */
+ #steps .row>.left,
+ #steps .row>.central,
+ #steps .row>.right {
+   float: left;
+   width: 31%;
+   padding: 0 1%;
+ }
+
+ /* BLOCCO PERCHE */
+ #why {
+   text-align: center;
+ }
+
+ #why .row img {
+   background-color: #428bca;
+   border-radius: 50%;
+   padding: 30px;
+   height: 80px;
+ }
+
+
+ #why .row>.first,
+ #why .row>.second,
+ #why .row>.third {
+   width: 70%;
+   margin-left: auto;
+   margin-right: auto;
+   margin-bottom: 40px;
+   margin-top: 20px;
+   padding: 0 10px;
+ }
+/* general */
+
+hr{
+  margin: 20px 0;
+}
  body {
    margin: 0 5%
  }
